Changed theming and color. Updating links and improving UI.

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,7 @@
 // Variables
 
-@brand-primary: #fed136;
+//@brand-primary: #fed136;
+@brand-primary: #7df9ff;
 @brand-danger: #e74c3c;
 @gray-darkest: #222;
 @gray: #777;
