--- a/css/userstyles.css
+++ b/css/userstyles.css
@@ -1,14 +1,27 @@
-.general-block{
+.subheading-block{
+	border-style: solid;
 	border-radius: 25px;
+	border-width: thick;
+	border-color: #319ede;
 	padding: 20px 20px 15px 20px;
-	background-color: #e9e9e9;
+	/*background-color: #e9e9e9;*/
+	background-color: black;
 	font-family: "Montserrat";
-	font-style: normal;
-	font-size: 2000%
+	
 }
 
-.general-block > p{
-	font-size: 19px;
+.subheading-block > p{
+	color: white;
+	font-size: 15px;
+}
+
+.heading-block{
+	padding: 0.5% 1% 0.5% 1%;
+	margin-bottom: 2%;
+	background-color: #319ede;
+	margin-left: 30%;
+	margin-right: 30%;
+	border-radius: 25px;
 }
 
 body{
@@ -17,4 +30,18 @@ body{
 
 .text-white{
 	color: white;
+}
+
+.text-large{
+	font-size: 20px;
+	font-style: bold;
+}
+
+#Morse{
+	text-align: center;
+	font-family: TRON;
+	font-size: 25px;
+	color: white;
+	text-shadow: 0px 0px 20px #fff;
+
 }
